SERVER-2825 Added support for async error codes